# ChangeLog for dev-java/commons-collections
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/commons-collections/ChangeLog,v 1.47 2008/04/13 22:05:07 betelgeuse Exp $

  13 Apr 2008; Petteri Räty <betelgeuse@gentoo.org>
  -commons-collections-3.2.ebuild:
  Remove old revision.

  09 Dec 2007; Krzysiek Pawlik <nelchael@gentoo.org>
  commons-collections-3.2-r1.ebuild:
  Disable src_test on ppc.

  25 Nov 2007; Krzysiek Pawlik <nelchael@gentoo.org>
  commons-collections-3.2-r1.ebuild:
  Stable on ppc, bug #198993.

  18 Nov 2007; Markus Rothe <corsair@gentoo.org>
  commons-collections-3.2-r1.ebuild:
  Stable on ppc64; bug #198993

  17 Nov 2007; William L. Thomson Jr. <wltjr@gentoo.org>
  commons-collections-3.2-r1.ebuild:
  amd64 stable, bug #198993.

  13 Nov 2007; Christian Faulhammer <opfer@gentoo.org>
  commons-collections-3.2-r1.ebuild:
  stable x86, bug 198993

*commons-collections-3.2-r1 (17 May 2007)

  17 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  +commons-collections-3.2-r1.ebuild:
  Add src_test support and test-framework local use flag for installing the
  test framework needed by commons-beanutils-collections unit tests.

  14 Feb 2007; Vlastimil Babka <caster@gentoo.org>
  -commons-collections-3.1.ebuild, -commons-collections-3.1-r1.ebuild:
  Cleanup.

  26 Jan 2007; Steve Dibb <beandog@gentoo.org>
  commons-collections-3.2.ebuild:
  amd64 stable, bug 157984

  30 Dec 2006; Markus Rothe <corsair@gentoo.org>
  commons-collections-3.2.ebuild:
  Stable on ppc64; bug #157984

  17 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  commons-collections-3.2.ebuild:
  Stable on ppc wrt bug #157984.

  13 Dec 2006; Christian Faulhammer <opfer@gentoo.org>
  commons-collections-3.2.ebuild:
  stable x86, bugs #157984

*commons-collections-3.2 (15 Nov 2006)

  15 Nov 2006; William L. Thomson Jr. <wltjr@gentoo.org>
  +commons-collections-3.2.ebuild:
  Revision bump, moved ebuild from overlay.
