@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/commons-collections
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/commons-collections/ChangeLog,v 1.47 2008/04/13 22:05:07 betelgeuse Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/commons-collections/ChangeLog,v 1.48 2008/06/23 09:43:33 ali_bush Exp $
+
+  23 Jun 2008; Alistair Bush <ali_bush@gentoo.org>
+  commons-collections-3.2-r1.ebuild, commons-collections-3.2.1.ebuild:
+  Update urls as upstream forwards have been removed.
 
   13 Apr 2008; Petteri Räty <betelgeuse@gentoo.org>
   -commons-collections-3.2.ebuild:
